--- a/app/src/main/res/layout/fragment_organization_home_detail.xml
+++ b/app/src/main/res/layout/fragment_organization_home_detail.xml
@@ -1,14 +1,226 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.home.OrganizationHomeDetailFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageButton
+                android:id="@+id/organizationBackBtnDetail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#0000FFFF"
+                android:contentDescription="@string/backButton"
+                android:minWidth="48dp"
+                android:minHeight="48dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/baseline_arrow_back_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView22"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="Edit the Job"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/organizationDeleteBtnDetail"
+                app:layout_constraintStart_toEndOf="@+id/organizationBackBtnDetail"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+                android:id="@+id/organizationDeleteBtnDetail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#0000FFFF"
+                android:minWidth="48dp"
+                android:minHeight="48dp"
+                android:src="@drawable/baseline_delete_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/job_image"
+            android:textColor="#3C3A3A"
+            android:textSize="20sp" />
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="170dp">
+
+            <ImageView
+                android:id="@+id/organizationImageDetail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:src="@tools:sample/avatars" />
+
+            <ImageButton
+                android:id="@+id/organizationUploadImageBtnDetail"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_gravity="bottom|end"
+                android:backgroundTint="#FFFFFF"
+                android:contentDescription="This is my image button"
+                android:src="@drawable/baseline_upload_24" />
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/job_name"
+                android:textColor="#3C3A3A"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/organizationNameDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTintMode="add"
+                android:hint="Job Name"
+                android:inputType="textLongMessage"
+                android:textColorHint="#B3ACAC"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/job_des"
+                android:textColor="#3C3A3A"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/organizationDescriptionDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTintMode="add"
+                android:hint="Job Description"
+                android:inputType="textLongMessage"
+                android:textColorHint="#B3ACAC"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/job_specialist"
+                android:textColor="#3C3A3A"
+                android:textSize="20sp" />
+
+            <Spinner
+                android:id="@+id/organizationSpecialistSpinnerDetail"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="#FDFDFD"
+                android:backgroundTint="#B1AEAE"
+                android:entries="@array/joboptions"
+                tools:ignore="TouchTargetSizeCheck" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView15"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/areacity"
+                android:textColor="#3C3A3A"
+                android:textSize="20sp" />
+
+            <Spinner
+                android:id="@+id/organizationAreaSpinnerDetail"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="@color/white"
+                android:backgroundTint="#B0ADAD"
+                android:entries="@array/areaoptions"
+                tools:ignore="TouchTargetSizeCheck" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/job_payrate"
+                android:textColor="#3C3A3A"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/organizationPayRateDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTintMode="add"
+                android:hint="Job Pay Rate"
+                android:inputType="number"
+                android:textColorHint="#B3ACAC"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btnPostJob"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:text="Edit Job" />
+
+    </LinearLayout>
 
 </FrameLayout>
