--- a/app/src/main/res/layout/fragment_posting.xml
+++ b/app/src/main/res/layout/fragment_posting.xml
@@ -32,13 +32,13 @@
             android:layout_height="170dp">
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/organizationImageDetail"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:src="@tools:sample/avatars" />
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/organizationUploadImageBtnDetail"
                 android:layout_width="76dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
@@ -64,7 +64,7 @@
                 android:textSize="20sp" />
 
             <EditText
-                android:id="@+id/etJobName"
+                android:id="@+id/organizationNameDetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTintMode="add"
@@ -89,7 +89,7 @@
                 android:textSize="20sp" />
 
             <EditText
-                android:id="@+id/etJobDescription"
+                android:id="@+id/organizationDescriptionDetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTintMode="add"
@@ -114,7 +114,7 @@
                 android:textSize="20sp" />
 
             <Spinner
-                android:id="@+id/jobspinner"
+                android:id="@+id/organizationSpecialistSpinnerDetail"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:background="#FDFDFD"
@@ -138,7 +138,7 @@
                 android:textSize="20sp" />
 
             <Spinner
-                android:id="@+id/areaspinner"
+                android:id="@+id/organizationAreaSpinnerDetail"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:background="@color/white"
@@ -163,7 +163,7 @@
                 android:textSize="20sp" />
 
             <EditText
-                android:id="@+id/etJobPayRate"
+                android:id="@+id/organizationPayRateDetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTintMode="add"
